tests/data/model/invalid/explicit_coef0_in_linear_kernel.libsvm.model
svm_type c_svc
kernel_type linear
coef0 1.5
nr_class 2
rho 0.37330625882191915
label 0 1
total_sv 5
nr_sv 2 3
SV
-0.17609610490769723 1:-1.117828e+00 2:-2.908719e+00 3:6.663834e-01 4:1.097883e+00
0.8838187731213127 1:-5.282118e-01 2:-3.358810e-01 3:5.168730e-01 4:5.460446e-01
-0.47971257671001616 1:-2.098121e-01 2:6.027694e-01 3:-1.308685e-01 4:1.080525e-01
0.0034556484621847128 1:1.884940e+00 2:1.005186e+00 3:2.984999e-01 4:1.646463e+00
-0.23146573996578407 1:5.765022e-01 2:1.014056e+00 3:1.300943e-01 4:7.261914e-01
